--- a/CreatingSelf-drivingCarModels.ipynb
+++ b/CreatingSelf-drivingCarModels.ipynb
@@ -866,7 +866,7 @@
         "                              validation_steps=200,\n",
         "                              verbose=1,\n",
         "                              shuffle=1,\n",
-        "                              callbacks=[checkpoint_callback])\n",
+        "                              callbacks=[es, checkpoint_callback])\n",
         "\n",
         "model.save(os.path.join(model_output_dir,'lane_navigation_final.h5'))\n",
         "\n",
